[project]
name = "MissForest"
version = "2.3.2"
authors = [
  { name="Yuen Shing Yan Hindy", email="yuenshingyan@gmail.com" },
]
description = "Best imputation method."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yuenshingyan/MissForest"
"Bug Tracker" = "https://github.com/yuenshingyan/MissForest/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
